sun.misc.BASE64Decoder and BASE64Encoder