@@ -2,8 +2,7 @@ package net.whydah.service;
 
 import net.whydah.util.Configuration;
 import org.junit.Test;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import  java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -82,7 +81,7 @@ public class PaddingAndCryptoProcessTest {
             final Cipher c = Cipher.getInstance(ALGORITHM);
             c.init(Cipher.ENCRYPT_MODE, key);
             final byte[] encValue = c.doFinal(valueEnc.getBytes());
-            encryptedVal = new BASE64Encoder().encode(encValue);
+            encryptedVal = Base64.getEncoder().encodeToString(encValue);
         } catch (Exception ex) {
             System.out.println("The Exception is=" + ex);
         }
@@ -98,7 +97,7 @@ public class PaddingAndCryptoProcessTest {
 
             final Cipher c = Cipher.getInstance(ALGORITHM);
             c.init(Cipher.DECRYPT_MODE, key);
-            final byte[] decorVal = new BASE64Decoder().decodeBuffer(encryptedValue);
+            final byte[] decorVal = Base64.getDecoder().decode(encryptedValue);
             final byte[] decValue = c.doFinal(decorVal);
             decryptedValue = new String(decValue);
         } catch (Exception ex) {
